# mcp-coroot

./: CLAUDE.md  Dockerfile  K8S.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
src/mcp_coroot/: server.py
tests/: test_main.py
